[package]
name = "zip_fast_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6"
pyo3 = {version = "0.16", features = ["extension-module"]}

[lib]
crate-type = ["cdylib"]
name = "zip_fast_reader"

[package.metadata.maturin]
require-dist = ["maturin"] 